Name refactor. Add new endpoints functionality

--- a/templates/newgame.html
+++ b/templates/newgame.html
@@ -1,6 +1,8 @@
-<form>
-    Game name:<br>
-    <input type="text" name="gamename" value="">
+<form method="POST">
+    Game name:</br>
+    <input type="text" name="gamename" value=""></br>
+    Description:</br>
+    <input type="text" name="description" value="">
     <br>
     <input type="submit" value="Ok">
 </form> 
