Fix url patterns. Add edit endpoint functionality

--- a/templates/newcategory.html
+++ b/templates/newcategory.html
@@ -1,5 +1,5 @@
 <form method="POST">
-    Catalog name:<br>
+    Category name:<br>
     <input type="text" name="categoryname" value="">
     <br>
     <input type="submit" value="Ok">
