--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,17 @@
+<html>
+    <head>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+    </head>
+    <body>
+        <ul class="nav">
+            <li class="nav">Home</li>
+            <li class="nav"></li>
+        </ul>
+        
 {% if categories %}
     {% for category in categories %}
     <a href="{{url_for('showSelectedGames', gamecat_id = category.id )}}">{{ category.name }}</a></br><form action="{{url_for('createNewGame', gamecat_id = category.id )}}"><input type="submit" value="Add Game"></form>
     {% endfor %}
 {% endif %}
+    </body>
+</html>
