--- a/templates/games.html
+++ b/templates/games.html
@@ -1,8 +1,5 @@
 {% if games %}
     {% for game in games %}
-        {{ game.name }} </br>
-        <form action="{{url_for('deleteSelectedGame', game_id = game.id )}}"><input type="submit" value="Delete"></form>
-        <form action="{{url_for('editSelectedItem', game_id = game.id )}}"><input type="submit" value="Edit"></form>
-        {{ game.description }} </br>
+        <a href="{{url_for('showSelectedGame', game_id = game.id )}}">{{ game.name }}</a></br>
     {% endfor %}
 {% endif %}
