--- a/static/styles.css
+++ b/static/styles.css
@@ -23,3 +23,71 @@ li.nav a:hover {
     background-color: #111;
 }
 
+.bg {
+    background-color: bisque;
+}
+
+ul.left {
+    text-align: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #14436b;
+}
+
+li.left a {
+    text-align: center;
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li.left a.active {
+    text-align: center;
+    background-color: #4CAF50;
+    color: white;
+}
+
+li.left a:hover:not(.active) {
+    text-align: center;
+    background-color: #555;
+    color: white;
+}
+
+ul {
+    padding: 0;
+}
+
+li.center a:hover:not(.active) {
+    text-align: center;
+    background-color: #555;
+    color: white;
+}
+
+li.center a {
+    text-align: center;
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li.center a.active {
+    text-align: center;
+    background-color: #4CAF50;
+    color: white;
+}
+
+li.center a:hover:not(.active) {
+    text-align: center;
+    background-color: #555;
+    color: white;
+}
+
+li.center:last-child{
+    list-style-type: none;
+    text-align: center;
+}
+
