--- a/templates/authorizedgame.html
+++ b/templates/authorizedgame.html
@@ -1,3 +1,8 @@
+<html>
+    <head>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+    </head>
+    <body class = "bg">
 {{ name }} </br>
 </br>
 Description: </br>
@@ -5,3 +10,5 @@ Description: </br>
 {{ description }} </br>
 <form action="{{url_for('deleteSelectedGame', game_id = id)}}"><input type="submit" value="Delete"></form>
 <form action="{{url_for('editSelectedItem', game_id = id )}}"><input type="submit" value="Edit"></form>
+    </body>
+</html>
