--- a/templates/deletegame.html
+++ b/templates/deletegame.html
@@ -1,5 +1,12 @@
+<html>
+    <head>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+    </head>
+    <body class = "bg">
 <form method="POST">
     Are you sure you want to delete game?
         <input type="submit" value="Ok">
-</form> 
+</form>
+    </body>
+</html>
     
