--- a/templates/editgame.html
+++ b/templates/editgame.html
@@ -1,4 +1,9 @@
-<form method="POST">
+<html>
+    <head>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+    </head>
+    <body class = "bg">
+    <form method="POST">
     EDIT</br>
         Game name:</br>
         <input type="text" name="gamename" value=""></br>
@@ -6,5 +11,7 @@
         <input type="text" name="description" value="">
         <br>
         <input type="submit" value="Ok">
-    </form> 
+    </form>
+    </body>
+</html>
     
