--- a/templates/game.html
+++ b/templates/game.html
@@ -1,5 +1,12 @@
+<html>
+    <head>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+    </head>
+    <body class = "bg">
 {{ name }} </br>
 </br>
 Description: </br>
 </br>
 {{ description }} </br>
+    </body>
+</html>
