--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
   <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
   </script>
@@ -14,7 +14,7 @@
 </head>
 
 
-<body>  
+<body class="bg">  
   
 <!-- Google Sign In -->
 
