--- a/templates/newcategory.html
+++ b/templates/newcategory.html
@@ -1,6 +1,13 @@
-<form method="POST">
-    Category name:<br>
-    <input type="text" name="categoryname" value="">
-    <br>
-    <input type="submit" value="Ok">
-</form> 
+<html>
+    <head>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+    </head>
+    <body class="bg">
+        <form method="POST">
+            Category name:<br>
+            <input type="text" name="categoryname" value="">
+            <br>
+            <input type="submit" value="Ok">
+        </form> 
+    </body>
+</html>
