--- a/templates/newgame.html
+++ b/templates/newgame.html
@@ -1,8 +1,15 @@
-<form method="POST">
+<html>
+    <head>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+    </head>
+    <body class="bg">
+    <form method="POST">
     Game name:</br>
     <input type="text" name="gamename" value=""></br>
     Description:</br>
     <input type="text" name="description" value="">
     <br>
     <input type="submit" value="Ok">
-</form> 
+    </form> 
+    </body>
+</html>
