--- a/templates/nopermissions.html
+++ b/templates/nopermissions.html
@@ -1,1 +1,9 @@
-No permission to site
+<html>
+    <head>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+    </head>
+    <body>
+        No permission to content
+    </body>
+</html>
+
