--- a/templates/game.html
+++ b/templates/game.html
@@ -3,10 +3,14 @@
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
     </head>
     <body class = "bg">
-{{ name }} </br>
-</br>
-Description: </br>
-</br>
-{{ description }} </br>
+    <div class="content">
+        Game name: </br>
+        </br>
+        {{ name }} </br>
+        </br>
+        Description: </br>
+        </br>
+        {{ description }} </br>
+    </div>
     </body>
 </html>
