--- a/templates/deletegame.html
+++ b/templates/deletegame.html
@@ -2,6 +2,14 @@
     <head>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
     </head>
+    <ul class="nav">
+            <li class="nav"><a href="{{url_for('showMainPage')}}">Home</a></li>
+            {% if loginstate == None %}
+            <li class="nav" style="float: right;"><a href="{{url_for('logIn')}}">Login</a></li>
+            {% elif loginstate != None %}
+            <li class="nav" style="float: right;"><a href="{{url_for('gdisconnect')}}">Logout</a></li>
+            {% endif %}
+        </ul>
     <body class = "bg">
 <form method="POST">
     Are you sure you want to delete game?
