--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,18 @@
     <body class="bg">
         <ul class="nav">
             <li class="nav"><a href="{{url_for('showMainPage')}}">Home</a></li>
-            <li class="nav"><a href="{{url_for('logIn')}}">Login</a></li>
+            {% if loginstate == None %}
+            <li class="nav" style="float: right;"><a href="{{url_for('logIn')}}">Login</a></li>
+            {% elif loginstate != None %}
+            <li class="nav" style="float: right;"><a href="{{url_for('gdisconnect')}}">Logout</a></li>
+            {% endif %}
         </ul>
         <ul class="left">
-{% if categories %}
-    {% for category in categories %}
-    <li class="left"><a href="{{url_for('showSelectedGames', gamecat_id = category.id )}}">{{ category.name }}</a><form action="{{url_for('createNewGame', gamecat_id = category.id )}}"><input type="submit" value="Add Game"></form></li>
-    {% endfor %}
-{% endif %}
+    {% if categories %}
+        {% for category in categories %}
+        <li class="left"><a href="{{url_for('showSelectedGames', gamecat_id = category.id )}}">{{ category.name }}</a><form action="{{url_for('createNewGame', gamecat_id = category.id )}}"><input type="submit" value="Add Game"></form></li>
+        {% endfor %}
+    {% endif %}
         </ul>
     </body>
 </html>
