Minor frontend fixes

--- a/templates/newcategory.html
+++ b/templates/newcategory.html
@@ -11,11 +11,11 @@
                     <li class="nav" style="float: right;"><a href="{{url_for('gdisconnect')}}">Logout</a></li>
                     {% endif %}
                 </ul>
-        <form method="POST">
+        <div style="display:table; margin: 0 auto; padding-top: 50px;"><form method="POST">
             Category name:<br>
             <input type="text" name="categoryname" value="">
             <br>
-            <input type="submit" value="Ok">
-        </form> 
+            <input type="submit" value="Add">
+        </form></div>
     </body>
 </html>
