--- a/templates/nopermissions.html
+++ b/templates/nopermissions.html
@@ -11,7 +11,7 @@
                     <li class="nav" style="float: right;"><a href="{{url_for('gdisconnect')}}">Logout</a></li>
                     {% endif %}
                 </ul>
-        No permission to content
+        <div style="display:table; margin: 0 auto; padding-top: 50px;">No permission to content</div>
     </body>
 </html>
 
