--- a/templates/login.html
+++ b/templates/login.html
@@ -56,7 +56,7 @@ function signInCallback(authResult) {
       success: function(result) {
         // Handle or verify the server response if necessary.
         if (result) {
-          $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+          $('#result').html('<div style="display:table; margin: 0 auto">' + result + '</br></br></br>Redirecting...</div>')
          setTimeout(function() {
           location.href = "/";
          }, 4000);
